--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.2",
+    "color-calendar": "^1.0.7",
+    "evo-calendar": "^1.1.3",
+    "framer-motion": "^7.4.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.37",
+    "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +49,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
