--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "color-calendar": "^1.0.7",
     "evo-calendar": "^1.1.3",
     "framer-motion": "^7.4.0",
+    "hamburgers": "^1.2.1",
     "primeicons": "^6.0.1",
     "primereact": "^8.6.1",
     "react": "^18.2.0",
